@@ -1,5 +1,9 @@
 2010-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/base/copy_vector.cpp, itpp/base/copy_vector.h,
+	itpp/base/sources.mk, itpp/base/vec.cpp: Move configure dependent
+	implementations to copy_vector.cpp file
+
 	* itpp/base/vec.cpp, itpp/base/vec.h: Move dot() and
 	outer_product() specialisations to vec.cpp
 
